# GameBoy

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
GUI/: main.py
GUI/GUI/: GameBoy.py  controller.py  main.py  sdl_audio.py  sdl_video.py
GUI/config/: config.py
GUI/controller/: controller.py
GUI/game_boy/: game_boy.py
GUI/qt/: color_tab.py  key_bindings_tab.py  main_window.py  options_window.py  paths_tab.py  preferences_window.py  sound_tab.py
GUI/sdl/: controller.py  sdl_audio.py  sdl_video.py
GameBoy/: CMakeLists.txt
GameBoy/include/: CGB.hpp  GBC.hpp
GameBoy/src/: APU.cpp  CGB.cpp  CPU.cpp  CPU_Instructions.cpp  CPU_Registers.cpp  Channel1.cpp  Channel2.cpp  Channel3.cpp  Channel4.cpp  GBC.cpp  GameBoy.cpp  GameBoy_Clocks.cpp  GameBoy_Memory.cpp  GameWindow.cpp  PPU.cpp  PixelFIFO.cpp  main.cpp
GameBoy/src/Cartridge/: MBC0.cpp  MBC1.cpp  MBC3.cpp  MBC5.cpp
GameBoy/src/include/: APU.hpp  CPU.hpp  CPU_Registers.hpp  Channel1.hpp  Channel2.hpp  Channel3.hpp  Channel4.hpp  GameBoy.hpp  GameWindow.hpp  PPU.hpp  PixelFIFO.hpp
GameBoy/src/include/Cartridge/: Cartridge.hpp  MBC0.hpp  MBC1.hpp  MBC3.hpp  MBC5.hpp
include/: CPU.hpp  CPU_Registers.hpp  Cartridge.hpp  Controller.hpp  GameBoy.hpp  PPU.hpp  Paths.hpp  PixelFIFO.hpp
include/Cartridge/: Cartridge.hpp  MBC0.hpp  MBC1.hpp  MBC5.hpp
resources/: PokemonYellow.mov  ZeldaDX.mov
src/: CPU.cpp  CPU_Instructions.cpp  Cartridge.cpp  Controller.cpp  GameBoy.cpp  GameBoy_Clocks.cpp  GameBoy_Memory.cpp  GameWindow.cpp  PPU.cpp  PixelFIFO.cpp  main.cpp
src/Cartridge/: MBC0.cpp  MBC1.cpp  MBC5.cpp
